k8s/base/namespace.yaml
# SPDX-FileCopyrightText: 2025 Damian Fajfer <damian@fajfer.org>
#
# SPDX-License-Identifier: EUPL-1.2

apiVersion: v1
kind: Namespace
metadata:
  name: chronowarden
  labels:
    app.kubernetes.io/name: chronowarden
    app.kubernetes.io/part-of: chronowarden
